force-app/main/default/objects/Termination_Equipment_Quote__c/Termination_Equipment_Quote__c.object-meta.xml
<CustomObject>
    <label>Termination Equipment Quote</label>
    <nameField>
        <displayFormat>TEQ-{0000000000}</displayFormat>
        <label>Termination Equipment Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Termination Equipment Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>