force-app/main/default/objects/Termination_Equipment_Quote__c/fields/DestinationCity__c.field-meta.xml
<CustomField>
    <fullName>DestinationCity__c</fullName>
    <formula>Termination_Quote_Equipment__r.cllease__Contract_Equipment__r.City__c</formula>
    <label>DestinationCity</label>
    <type>Text</type>
</CustomField>