force-app/main/default/objects/Termination_Equipment_Quote__c/fields/DestinationCounty__c.field-meta.xml
<CustomField>
    <fullName>DestinationCounty__c</fullName>
    <formula>Termination_Quote_Equipment__r.cllease__Contract_Equipment__r.cllease__County__c</formula>
    <label>DestinationCounty</label>
    <type>Text</type>
</CustomField>