force-app/main/default/objects/Termination_Equipment_Quote__c/fields/DestinationState__c.field-meta.xml
<CustomField>
    <fullName>DestinationState__c</fullName>
    <description>SUBSTITUTE(LEFT(TEXT(Termination_Quote_Equipment__r.cllease__Contract_Equipment__r..cllease__State_Province__c),FIND(&quot;-&quot;,TEXT(Termination_Quote_Equipment__r.cllease__Contract_Equipment__r..cllease__State_Province__c))),&quot;-&quot;,&quot;&quot;)</description>
    <formula>Termination_Quote_Equipment__r.cllease__Contract_Equipment__r.State__c</formula>
    <label>DestinationState</label>
    <type>Text</type>
</CustomField>