force-app/main/default/objects/Termination_Equipment_Quote__c/fields/DestinationZipCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationZipCode__c</fullName>
    <formula>Termination_Quote_Equipment__r.cllease__Contract_Equipment__r.Zip_Code__c</formula>
    <label>DestinationZipCode</label>
    <type>Text</type>
</CustomField>