force-app/main/default/objects/Termination_Equipment_Quote__c/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <formula>/* Check for account level tax Exemption and then Equipment level Tax Exemption*/
IF(Termination_Quote__r.cllease__Contract__r.cllease__Account__r.Tax_Exempt__c == false, 
      IF(Termination_Quote_Equipment__r.cllease__Contract_Equipment__r.cllease__Tax_exemption__c == true, true, false), 
      true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>