force-app/main/default/objects/Termination_Equipment_Quote__c/fields/Termination_Quote__c.field-meta.xml
<CustomField>
    <fullName>Termination_Quote__c</fullName>
    <label>Termination Quote</label>
    <referenceTo>cllease__Termination_Quote_Header__c</referenceTo>
    <relationshipLabel>Termination Equipment Quotes</relationshipLabel>
    <relationshipName>Termination_Equipment_Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>