force-app/main/default/objects/Termination_Equipment_Quote__c/fields/Termination_Quote_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Termination_Quote_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Termination Quote Equipment</label>
    <referenceTo>cllease__Termination_Quote_Equipment__c</referenceTo>
    <relationshipLabel>Termination Equipment Quotes</relationshipLabel>
    <relationshipName>Termination_Equipment_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>